# shiro

./: .gitignore  PLAN.md  README.md  flake.nix  package.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  model.rs  service.rs
src-tauri/src/db/: memory.rs  mod.rs  sqlite.rs
src-tauri/src/llm/: anthropic.rs  mock.rs  mod.rs  ollama.rs
src/lib/: api.ts  layout.ts  store.svelte.ts
src/lib/components/: GraphBrowser.svelte  GraphTreeItem.svelte  GraphView.svelte  NodeEditor.svelte  ScriptModal.svelte  SettingsModal.svelte  VerificationModal.svelte
src/routes/: +page.svelte
